added some unit tests for CNF module